# avitochecker

./: pyproject.toml
avitochecker/: parser.py
