[tool.poetry]
name = "avitochecker"
version = "0.1.0"
description = ""
authors = ["zamertvuyusobaku <shinigami.origami1639@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
requests = "^2.28.1"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
